More additions to framework, should be in condition for beginning development with other modules.

--- a/src/game-model/Makefile
+++ b/src/game-model/Makefile
@@ -1,2 +1,2 @@
-App: Area.hpp Area.cpp Character.hpp Character.cpp GameModel.cpp GameModel.hpp GameModelTest.cpp
-	g++ -std=c++14 Area.hpp Area.cpp Character.hpp Character.cpp GameModel.hpp GameModel.cpp GameModelTest.cpp -o GameModel
+App: Area.hpp Area.cpp Character.hpp Character.cpp Entity.hpp Entity.cpp GameModel.cpp GameModel.hpp GameModelTest.cpp
+	g++ -std=c++14 Area.hpp Area.cpp Character.hpp Character.cpp Entity.hpp Entity.cpp GameModel.hpp GameModel.cpp GameModelTest.cpp -o GameModel
