--- a/src/game-model/CMakeLists.txt
+++ b/src/game-model/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(gameModel Area.cpp Character.cpp Entity.cpp GameModel.cpp)
+add_library(gameModel Area.cpp Character.cpp Entity.cpp GameModel.cpp Command.cpp Command.hpp)
 
 set_property(TARGET gameModel PROPERTY CXX_STANDARD 14)
