--- a/src/game-server/CMakeLists.txt
+++ b/src/game-server/CMakeLists.txt
@@ -1,18 +1,18 @@
 
 add_executable(game-server
         gameServer.cpp
-)
+        commandHandler.cpp commandHandler.h messageSender.cpp messageSender.h)
 
 target_link_libraries(game-server
-  networking
-)
+        networking
+        )
 
 set_target_properties(game-server
-                      PROPERTIES
-                      LINKER_LANGUAGE CXX
-                      CXX_STANDARD 14
-                      PREFIX ""
-)
+        PROPERTIES
+        LINKER_LANGUAGE CXX
+        CXX_STANDARD 14
+        PREFIX ""
+        )
 
 # This program requires boost
 find_package(Boost 1.58 COMPONENTS system REQUIRED)
@@ -20,6 +20,6 @@ include_directories(${Boost_INCLUDE_DIR})
 target_link_libraries(game-server ${Boost_LIBRARIES})
 
 install(TARGETS game-server
-  RUNTIME DESTINATION bin
-)
+        RUNTIME DESTINATION bin
+        )
 
