--- a/src/game-server/controller/CMakeLists.txt
+++ b/src/game-server/controller/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(controller Controller.cpp)
+target_link_libraries(controller gameModel)
 
 set_property(TARGET controller PROPERTY CXX_STANDARD 14)
