Add protocols for sending between client and server

--- a/lib/game/CMakeLists.txt
+++ b/lib/game/CMakeLists.txt
@@ -5,3 +5,5 @@ set_property(TARGET game PROPERTY CXX_STANDARD 14)
 install(TARGETS game
         ARCHIVE DESTINATION lib
         )
+
+add_subdirectory(protocols)
