--- a/src/game-server/CMakeLists.txt
+++ b/src/game-server/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(game-server
 target_link_libraries(game-server
         networking
         game
+        protocols
         )
 
 set_target_properties(game-server
