Added game functionality methods and stubs

--- a/src/game-server/CMakeLists.txt
+++ b/src/game-server/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(game-server
         BufferedMessageSender.cpp
         Command.cpp
         Controller.cpp
-        )
+        GameFunctions.cpp GameFunctions.hpp)
 
 target_link_libraries(game-server
         networking
