--- a/src/game-model/CMakeLists.txt
+++ b/src/game-model/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_library(game Area.cpp Character.cpp Entity.cpp GameModel.cpp)
+add_library(game Area.cpp
+            Character.cpp
+            Entity.cpp
+            GameModel.cpp
+            Inventory.cpp
+            )
 
 set_property(TARGET game PROPERTY CXX_STANDARD 14)
 
