Remove message sender and use displaymessagebuilder instead

--- a/src/game-server/CMakeLists.txt
+++ b/src/game-server/CMakeLists.txt
@@ -2,10 +2,9 @@
 add_executable(game-server
         GameServer.cpp
         Authenticator.cpp
-        BufferedMessageSender.cpp
         Command.cpp
         Controller.cpp
-        )
+        DisplayMessageBuilder.cpp DisplayMessageBuilder.hpp)
 
 target_link_libraries(game-server
         networking
