Refactors game commands to return a message builder interface. Removes using namespace statements from some headers. Changes server to use gsl span.

--- a/src/game-server/CMakeLists.txt
+++ b/src/game-server/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(game-server
         Command.cpp
         Controller.cpp
         DisplayMessageBuilder.cpp DisplayMessageBuilder.hpp
-        GameFunctions.cpp GameFunctions.hpp Looper.cpp Looper.hpp ServerLoop.cpp ServerLoop.hpp)
+        GameFunctions.cpp GameFunctions.hpp Looper.cpp Looper.hpp ServerLoop.cpp ServerLoop.hpp MessageBuilder.hpp)
 
 target_link_libraries(game-server
         networking
