--- a/src/game-model/CMakeLists.txt
+++ b/src/game-model/CMakeLists.txt
@@ -3,9 +3,10 @@ add_library(game Area.cpp
             Entity.cpp
             GameModel.cpp
             Inventory.cpp
+            Resets.cpp
             GameDataImporter.cpp
             Attributes.cpp
-        Resets.cpp Resets.h)
+        )
 
 set_property(TARGET game PROPERTY CXX_STANDARD 14)
 
