Refactors CommandCreator. Moves server config to game-server folder

--- a/src/game-server/CMakeLists.txt
+++ b/src/game-server/CMakeLists.txt
@@ -35,6 +35,5 @@ install(TARGETS game-server
         RUNTIME DESTINATION bin
         )
 
-add_custom_command(TARGET game-server PRE_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
-        ${CMAKE_SOURCE_DIR}/data $<TARGET_FILE_DIR:game-server>)
+file(COPY ${CMAKE_SOURCE_DIR}/data DESTINATION ${PROJECT_BINARY_DIR}/bin)
+file(COPY config.yml DESTINATION ${PROJECT_BINARY_DIR}/bin)
