--- a/src/game-server/config.yml
+++ b/src/game-server/config.yml
@@ -1,10 +1,10 @@
 #Port number for the server
 port: 4000
 #Path to the map file
-map-file: "mgoose.yml"
+map-file: "data/mgoose.yml"
 #The number of ticks per second that the server should target
 ticks-per-second: 10
 #Options for logging
 google-log-directory: "./"
 #commands configuration file
-commands-file: "./commands.yml"
+commands-file: "data/commands.yml"
