Parse YAML spells

--- a/src/game-model/CMakeLists.txt
+++ b/src/game-model/CMakeLists.txt
@@ -1,11 +1,13 @@
 add_library(game Area.cpp
             Character.cpp
             Entity.cpp
+			Spell.cpp
             GameModel.cpp
             Inventory.cpp
             GameDataImporter.cpp
             Attributes.cpp
-            )
+	
+)
 
 set_property(TARGET game PROPERTY CXX_STANDARD 14)
 
