Refactors command to an interface. Moves game commands to own folder.

--- a/data/commands.yml
+++ b/data/commands.yml
@@ -10,7 +10,7 @@ commands:
     usage: "[object]"
     bindings:
       - "look"
-  command-go:
+  command-move:
     desc: "Move to a connected area."
     usage: "<direction>"
     bindings:
