--- a/src/game-server/CMakeLists.txt
+++ b/src/game-server/CMakeLists.txt
@@ -1,16 +1,15 @@
+file(GLOB_RECURSE commands_src "commands/*.hpp" "commands/*.cpp")
 
 add_executable(game-server
         GameServer.cpp
         Authenticator.cpp
-        Command.cpp
         Controller.cpp
-        DisplayMessageBuilder.cpp DisplayMessageBuilder.hpp
         GameFunctions.cpp GameFunctions.hpp
         Looper.cpp Looper.hpp
         ServerLoop.cpp ServerLoop.hpp
-        MessageBuilder.hpp
         ServerConfig.cpp ServerConfig.hpp
-        CommandCreator.cpp CommandCreator.hpp)
+        ${commands_src}
+        )
 
 target_link_libraries(game-server
         networking
@@ -26,14 +25,18 @@ set_target_properties(game-server
         PREFIX ""
         )
 
+include_directories("."
+        "commands"
+        )
+
 # This program requires boost
 find_package(Boost 1.58 COMPONENTS system REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
 target_link_libraries(game-server ${Boost_LIBRARIES})
 
 install(TARGETS game-server
-        RUNTIME DESTINATION bin
-        )
+RUNTIME DESTINATION bin
+)
 
 file(COPY ${CMAKE_SOURCE_DIR}/data DESTINATION ${PROJECT_BINARY_DIR}/bin)
 file(COPY config.yml DESTINATION ${PROJECT_BINARY_DIR}/bin)
