Pair programming with Brandon. Fixed bugs, added more interface functions and created a Google Test for combat system.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,8 +2,8 @@ add_subdirectory(lib)
 enable_testing()
 
 #exe to run all tests
-add_executable(runAllTests dummy.cpp dummy.cpp)
-target_link_libraries(runAllTests gtest gtest_main gmock_main glog)
+add_executable(runAllTests dummy.cpp dummy.cpp CombatTests.cpp)
+target_link_libraries(runAllTests gtest gtest_main gmock_main glog game)
 set_property(TARGET runAllTests PROPERTY CXX_STANDARD 14)
 
 add_test(NAME runAllTests COMMAND runAllTests)
