Established ground work for combat and magic commands, fleshed out combat function to support engaging and changing action, added action lookup initialisation to combat manager

--- a/src/game-server/CMakeLists.txt
+++ b/src/game-server/CMakeLists.txt
@@ -8,8 +8,7 @@ add_executable(game-server
         Looper.cpp Looper.hpp
         ServerLoop.cpp ServerLoop.hpp
         ServerConfig.cpp ServerConfig.hpp
-        ${commands_src}
-        )
+        ${commands_src})
 
 target_link_libraries(game-server
         networking
