--- a/src/game-model/CMakeLists.txt
+++ b/src/game-model/CMakeLists.txt
@@ -5,7 +5,11 @@ add_library(game Area.cpp
             Inventory.cpp
             GameDataImporter.cpp
             Attributes.cpp
-            )
+        ExpressionExtractor.hpp)
+
+find_package(Boost 1.58 COMPONENTS regex REQUIRED)
+include_directories(${Boost_INCLUDE_DIR})
+target_link_libraries(game ${Boost_LIBRARIES})
 
 set_property(TARGET game PROPERTY CXX_STANDARD 14)
 
