--- a/src/game-model/CMakeLists.txt
+++ b/src/game-model/CMakeLists.txt
@@ -10,11 +10,14 @@ add_library(game Area.cpp
             combat/CombatInstance.cpp
             combat/CharacterInstance.cpp
             combat/CombatAction.cpp
-            Spell.cpp ExpressionExtractor.hpp)
+            Spell.cpp
+            ExpressionExtractor.hpp)
 
 find_package(Boost 1.58 COMPONENTS regex REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
-target_link_libraries(game ${Boost_LIBRARIES})
+target_link_libraries(game
+        ${Boost_LIBRARIES}
+        expr-evaluator)
 
 set_property(TARGET game PROPERTY CXX_STANDARD 14)
 
