--- a/src/game-server/config.yml
+++ b/src/game-server/config.yml
@@ -2,6 +2,8 @@
 port: 4000
 #Path to the map file
 map-file: "data/mgoose.yml"
+#Path to the spells file
+spell-file: "data/spells.yml"
 #The number of ticks per second that the server should target
 ticks-per-second: 10
 #Options for logging
