--- a/data/commands.yml
+++ b/data/commands.yml
@@ -61,3 +61,9 @@ commands:
       bindings:
         - "cast"
         - "/c"
+  command-status:
+      desc: "Get player status"
+      usage: ""
+      bindings:
+        - "status"
+
