Fixes spells (evaluator was changed to return int instead of string) Fixes tests and adds combat tests to test suite

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,7 +11,10 @@ include_directories(${Boost_INCLUDE_DIR})
 add_executable(runAllTests
         dummy.cpp
         CommandConfigTests.cpp
-        lib/ExpressionExtractorTests.cpp SpellImportingTest.cpp)
+        ExpressionExtractorTests.cpp
+        SpellImportingTest.cpp
+        CombatTests.cpp
+        )
 
 target_link_libraries(runAllTests
         gtest
@@ -19,6 +22,8 @@ target_link_libraries(runAllTests
         gmock_main
         game
         game-server-lib)
+
+target_compile_definitions(runAllTests PRIVATE GOOGLE_STRIP_LOG=3)
 set_property(TARGET runAllTests PROPERTY CXX_STANDARD 14)
 
 add_test(NAME runAllTests COMMAND runAllTests)
