--- a/lib/expr-evaluator/CMakeLists.txt
+++ b/lib/expr-evaluator/CMakeLists.txt
@@ -4,6 +4,8 @@ add_library(expr-evaluator
         ExprEvaluator.cpp
         )
 
+target_link_libraries(expr-evaluator glog)
+
 set_target_properties(expr-evaluator
         PROPERTIES
         LINKER_LANGUAGE CXX
