Adds windows and gui skeleton to game client. Adds main menu and login window

--- a/src/game-client/CMakeLists.txt
+++ b/src/game-client/CMakeLists.txt
@@ -2,7 +2,7 @@
 add_executable(game-client
         GameClient.cpp
         chatWindow.cpp
-        )
+        MainMenuWindow.cpp MainMenuWindow.hpp Window.hpp Application.cpp Application.hpp LoginWindow.cpp LoginWindow.hpp)
 
 set_target_properties(game-client
         PROPERTIES
@@ -25,7 +25,9 @@ target_link_libraries(game-client
         protocols
         ${Boost_LIBRARIES}
         ${CURSES_LIBRARIES}
+        menu
         ${CMAKE_THREAD_LIBS_INIT}
+        glog
         )
 
 install(TARGETS game-client
