--- a/data/strings.yml
+++ b/data/strings.yml
@@ -30,10 +30,10 @@ strings:
 
  player-kicked: "has been kicked out"
 
- combat-engage-issue: 'You engage %s in battle'
- combat-engage-receive: 'You have been engaged in battle by %s'
- combat-attack-issue: 'You attack %s and deal %d damage'
- combat-attack-receive: 'You take %d damage from $n'
+ combat-engage-issue: 'You engage $N in battle'
+ combat-engage-receive: 'You have been engaged in battle by $n'
+ combat-attack-issue: 'You attack $N and deal $d damage'
+ combat-attack-receive: 'You take $d damage from $n'
  combat-attack-id: 'attack'
  combat-result-victory: 'You won the battle'
  combat-result-loss: 'You were killed and lost the battle'
