--- a/data/strings.yml
+++ b/data/strings.yml
@@ -39,17 +39,17 @@ strings:
  combat-result-loss: 'You were killed and lost the battle'
 
  spell-list-header: 'List of Spells: '
- spell-insufficient-mana: 'Not enough mana to cast %s'
- spell-unknown: 'You do not know the spell ''%s'''
- spell-offense-self: 'You cast %s on yourself for %d damage'
- spell-offense-source: 'You cast %s on %s for %d damage'
- spell-offense-target: '%s casts %s on you for %d damage'
- spell-defense-self: 'You cast %s on yourself and heal %d'
- spell-defense-source: 'You cast %s on %s and heal %d'
- spell-defense-target: '%s casts %s on you and heals you for %d'
- spell-generic-self: 'You cast %s on yourself'
- spell-generic-source: 'You cast %s on %s'
- spell-generic-target: '%s casts %s on you'
+ spell-insufficient-mana: 'Not enough mana to cast $a'
+ spell-unknown: 'You do not know the spell ''$a'''
+ spell-offense-self: 'You cast $a on yourself for $d damage'
+ spell-offense-source: 'You cast $a on $N for $d damage'
+ spell-offense-target: '$n casts $a on you for $d damage'
+ spell-defense-self: 'You cast $a on yourself and heal $d'
+ spell-defense-source: 'You cast $a on $N and heal $d'
+ spell-defense-target: '$n casts $a on you and heals you for $d'
+ spell-generic-self: 'You cast $a on yourself'
+ spell-generic-source: 'You cast $a on $N'
+ spell-generic-target: '$n casts $a on you'
 
  status-effect-expiry: 'Your status effect wears off'
 
