Upgraded message buffer to support sender information and colors, added more context to messages and updated all usages

--- a/src/game-server/CMakeLists.txt
+++ b/src/game-server/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(string-resource-importer
-        StringResourceImporter.cpp GameStrings.hpp)
+        StringResourceImporter.cpp ../../include/GameStrings.hpp)
 
 set_target_properties(string-resource-importer
         PROPERTIES
