Redefined function params to take in Window and x,y coordinates, changed color codes

--- a/src/game-client/CMakeLists.txt
+++ b/src/game-client/CMakeLists.txt
@@ -2,6 +2,8 @@
 add_executable(game-client
         GameClient.cpp
         chatWindow.cpp
+        StrColorizer.cpp
+        StrColorizer.hpp
         )
 
 set_target_properties(game-client
