Adds ability to handle data requests in the controller. Adds base worldbuilding window Updates tests for protocols and command configuration

--- a/data/commands.yml
+++ b/data/commands.yml
@@ -83,3 +83,9 @@ commands:
     bindings:
       - "kick"
       - "/k"
+  command-edit:
+    desc: "Edit areas"
+    usage: "[area|add|status]"
+    role: "worldbuilder"
+    bindings:
+      - "edit"
