--- a/src/game-server/config.yml
+++ b/src/game-server/config.yml
@@ -1,7 +1,7 @@
 #Port number for the server
 port: 4000
 #Path to the map file
-map-file: "data/mgoose.yml"
+map-file: "data/newgate.yml"
 #Path to the spells file
 spell-file: "data/spells.yml"
 #The number of ticks per second that the server should target
