--- a/src/game-model/CMakeLists.txt
+++ b/src/game-model/CMakeLists.txt
@@ -13,7 +13,8 @@ add_library(game Area.cpp
             combat/CombatAction.cpp
             Spell.cpp
             StatusEffect.cpp
-            ExpressionExtractor.hpp )
+            ExpressionExtractor.hpp
+            YmlSerializer.cpp)
 
 find_package(Boost 1.58 COMPONENTS regex REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
